cabal-version: 2.4
name:          main
version:       0.0.0
maintainer:    Joona Piirainen <joona.piirainen@gmail.com>

executable efg
  main-is:            Main.hs
  default-extensions:
    LambdaCase
    FlexibleContexts
    TemplateHaskell

  build-depends:
    , base
    , vector
    , lens
    , containers
    , mtl

  default-language:   Haskell2010

